# adventofcode

./: .gitignore  cabal.project  fetch.sh  flake.nix  tags
aoclude/: adventofcode.cabal  aoclude.cabal
aoclude/src/: Example.hs  Format.hs  Parser.hs
aoclude/src/Advent/: Box.hs  Chinese.hs  Coord.hs  Coord3.hs  Credit.md  Flow.hs  Format.hs  Graph.hs  Group.hs  Nat.hs  PQueue.hs  Permutation.hs  Prelude.hs  Queue.hs  Range.hs  ReadS.hs  Search.hs
aoclude/src/Example/: Day_23_02.hs
inputs/2024/: 05.txt
lua/: 01.lua  util.lua
python/: 10.py  24_11.py  24_18.py
solutions/: aoc.cabal
solutions/aoc24/: aoc24.cabal
solutions/src/2015/: 05.hs  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  utils.py
solutions/src/2023/: 01.hs  02.hs
solutions/src/2024/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2025/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  solve.py
