cabal-version:   3.4
name:            aoclude
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com
category:        Challenges
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Advent.Box
    Advent.Chinese
    Advent.Coord
    Advent.Coord3
    Advent.Format
    Advent.Group
    Advent.Permutation
    Advent.PQueue
    Advent.Queue
    Advent.Prelude
    Advent.Nat
    Advent.ReadS
    Advent.Range
    Advent.Flow
    Advent.Search

  build-depends:
    , base
    , containers
    , parsec
    , template-haskell
    , vector
    , extra
    , search-algorithms >= 0.3.3
    , array
    , MemoTrie
    , pretty-simple
    , range

  hs-source-dirs:   src
  default-language: GHC2021
