cabal-version:   3.0
name:            aoc
version:         0.1.0.0

-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com
category:        Challenges
build-type:      Simple
extra-doc-files: CHANGELOG.md

common extensions
  default-language:   GHC2021
  default-extensions: QuasiQuotes

common day
  hs-source-dirs: src
  build-depends:
    , aoclude
    , array
    , base
    , composition
    , containers
    , extra
    , monad-memo
    , mtl
    , parsec
    , regex
    , search-algorithms
    , text
    , unordered-containers
    , vector

executable 2024-01
  import:  day, extensions
  main-is: 2024/01.hs

executable 2024-02
  import:  day, extensions
  main-is: 2024/02.hs

executable 2024-03
  import: day, extensions
  main-is: 2024/03.hs

executable 2024-04
  import: day, extensions
  main-is: 2024/04.hs
