cabal-version:   3.0
name:            aoc
version:         0.1.0.0

-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com
category:        Challenges
build-type:      Simple
extra-doc-files: CHANGELOG.md

common extensions
  default-language:   GHC2021
  default-extensions: QuasiQuotes

common day
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
    , aoclude
    , array
    , base
    , composition
    , containers
    , extra
    , monad-memo
    , mtl
    , parsec
    , regex
    , search-algorithms
    , text
    , unordered-containers
    , vector

executable 2024-01
  import:  day, extensions
  main-is: 2024/01.hs

executable 2024-02
  import:  day, extensions
  main-is: 2024/02.hs

executable 2024-03
  import: day, extensions
  main-is: 2024/03.hs

executable 2024-04
  import: day, extensions
  main-is: 2024/04.hs

executable 2024-05
  import: day, extensions
  main-is: 2024/05.hs

executable 2024-06
  import: day, extensions
  main-is: 2024/06.hs

executable 2024-07
  import: day, extensions
  main-is: 2024/07.hs

executable 2024-08
  import: day, extensions
  main-is: 2024/08.hs

executable 2024-09
  import: day, extensions
  main-is: 2024/09.hs

executable 2024-10
  import: day, extensions
  main-is: 2024/10.hs

executable 2024-11
  import: day, extensions
  main-is: 2024/11.hs

executable 2024-12
  import: day, extensions
  main-is: 2024/12.hs

executable 2024-13
  import: day, extensions
  main-is: 2024/13.hs

executable 2024-14
  import: day, extensions
  main-is: 2024/14.hs

executable 2024-15
  import: day, extensions
  main-is: 2024/15.hs

executable 2024-16
  import: day, extensions
  main-is: 2024/16.hs

executable 2024-17
  import: day, extensions
  main-is: 2024/17.hs

executable 2024-18
  import: day, extensions
  main-is: 2024/18.hs
