cabal-version:   3.0
name:            aoc
version:         0.1.0.0

-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com
category:        Challenges
build-type:      Simple
extra-doc-files: CHANGELOG.md

common extensions
  default-language:   GHC2021
  default-extensions: QuasiQuotes

common day
  hs-source-dirs: src
  ghc-options:    -Wall
  build-depends:
    , aoclude
    , array
    , base
    , composition
    , containers
    , extra
    , MemoTrie
    , monad-memo
    , mtl
    , parsec
    , regex
    , search-algorithms
    , text
    , unordered-containers
    , vector

executable 2024-01
  import:  day, extensions
  main-is: 2024/01.hs

executable 2024-02
  import:  day, extensions
  main-is: 2024/02.hs

executable 2024-03
  import:  day, extensions
  main-is: 2024/03.hs

executable 2024-04
  import:  day, extensions
  main-is: 2024/04.hs

executable 2024-05
  import:  day, extensions
  main-is: 2024/05.hs

executable 2024-06
  import:  day, extensions
  main-is: 2024/06.hs

executable 2024-07
  import:  day, extensions
  main-is: 2024/07.hs

executable 2024-08
  import:  day, extensions
  main-is: 2024/08.hs

executable 2024-09
  import:  day, extensions
  main-is: 2024/09.hs

executable 2024-10
  import:  day, extensions
  main-is: 2024/10.hs

executable 2024-11
  import:  day, extensions
  main-is: 2024/11.hs

executable 2024-12
  import:  day, extensions
  main-is: 2024/12.hs

executable 2024-13
  import:  day, extensions
  main-is: 2024/13.hs

executable 2024-14
  import:  day, extensions
  main-is: 2024/14.hs

executable 2024-15
  import:  day, extensions
  main-is: 2024/15.hs

executable 2024-16
  import:  day, extensions
  main-is: 2024/16.hs

executable 2024-17
  import:  day, extensions
  main-is: 2024/17.hs

executable 2024-18
  import:  day, extensions
  main-is: 2024/18.hs

executable 2024-19
  import:        day, extensions
  build-depends: MemoTrie
  main-is:       2024/19.hs

executable 2024-20
  import:  day, extensions
  main-is: 2024/20.hs

executable 2024-21
  import:        day, extensions
  build-depends: MemoTrie
  main-is:       2024/21.hs

executable 2024-22
  import:  day, extensions
  main-is: 2024/22.hs

executable 2024-23
  import:        day, extensions
  build-depends: maximal-cliques
  main-is:       2024/23.hs

executable 2024-24
  import:  day, extensions
  main-is: 2024/24.hs

executable 2024-25
  import:  day, extensions
  main-is: 2024/25.hs

executable 2025-01
  import:  day, extensions
  main-is: 2025/01.hs

executable 2025-02
  import:  day, extensions
  main-is: 2025/02.hs

executable 2025-03
  import:  day, extensions
  main-is: 2025/03.hs

executable 2025-04
  import:  day, extensions
  main-is: 2025/04.hs

executable 2025-05
  import:  day, extensions
  main-is: 2025/05.hs

executable 2025-06
  import:  day, extensions
  main-is: 2025/06.hs

executable 2025-07
  import:  day, extensions
  main-is: 2025/07.hs

executable 2025-08
  import:        day, extensions
  build-depends: disjoint-containers
  main-is:       2025/08.hs

executable 2025-09
  import:  day, extensions
  main-is: 2025/09.hs

executable 2025-10
  import:  day, extensions
  build-depends: parallel, process
  main-is: 2025/10.hs
  ghc-options: -O2 -threaded +RTS -N
